public/stylesheets/style.css
@import url(https://fonts.googleapis.com/css?family=Dosis:400,500,600,300|Neucha);
html, body {
  height: 100%;
  -webkit-font-smoothing: antialiased;
}
html {
  background: url('../images/apples.jpg');
  background-repeat: no-repeat;
  background-size: cover;
}
body {
  position: absolute;
  top: 0; bottom: 0; left: 0; right: 0;
  color: white;
  font-size: 1.7em;
}

h3, h4, h5 {
  font-family: 'Neucha', cursive;
}

h1 {
  font-family: 'Neucha', cursive;
  font-size: 3.8em;
  color: #fff;
  text-align: center;
}

h2, h5 {
  font-family: 'Neucha', cursive;
  font-size: 1.8em;
  text-align: center;
}

.title hr {
  max-width: 200px;
  margin: 0 auto;
}

a {
  color: #00B7FF;
}

.container {
  padding-bottom: 50px;
  max-height: 990px;
}

ul {
  color: white;
}

.facts {
  width: 550px;
  background-color:
}

.shovel {
  float: right;
  margin-top: 180px;
}

.content {
  font-size: 14px
  font-family: "Dosis", sans-serif;
  min-height: 100%;
  height: auto !important;
  position: relative;
  margin: 0 auto 0;
  background-color: rgba(0, 0, 0, 0.5);

}
.search-info h4 {
  color: #888888;
  font-size: 1.4em;
}

.row{
  margin-right: -150px;
  margin-left: -50px;
  margin-bottom: -50px;
}

/**********************/
/******* NAVBAR *******/
.navbar {
  padding: 10px 100px;
  background-color: transparent;
  border: 0;
  border-color: transparent;
  border-radius: 0;
}

.navbar-default .navbar-brand,
.navbar-default .navbar-nav>li>a {
  color: white;
  font-size: 1.3em;
  font-weight: 500;
  font-family: "Dosis", cursive;
}

.navbar-brand:hover{
  color: #00B7FF !important;
}
.navbar-default .navbar-nav>li>a:hover {
  color: #00B7FF;
}
/**********************/
/******** FORM ********/
.wrapper {
  padding: 50px;
  background-color: white;
}
.authform {
  padding: 40px;
  margin: auto auto;
  background-color: rgba(255, 255, 255, 0.2 );
  border-radius: 5px;
  max-width: 80%;
  min-height: auto;
  margin-bottom: 40px;
}

.login {
  min-height: 100%;
  padding-top: 60px;
}
.login-form{
  padding: 40px;
  min-height: 230px;
  background-color: rgba(0,0,0, 0.6);
  border-radius: 5px;
}

.bg-danger, .bg-success, .bg-info {
  padding: 20px;
  border-radius: 5px;
}

.form-control {
  min-height: 20px;
  padding: 19px;
  margin-bottom: 20px;
  background-color: #f5f5f5;
  border: 1px solid #e3e3e3;
  border-radius: 4px;
  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.05);
  box-shadow: inset 0 1px 1px rgba(0,0,0,.05);
}

.cancel {
  margin-top: -15px;
}

/*********************/
/****** PROFILE ******/
.profile {
  padding: 40px;
  border-radius: 5px;
  background-color: rgba(0,0,0,0.8);
}
#map {
  color: #000;
  margin-left: 50px;
}

#location {
  color: #001100;
  padding-left: 120px;
}
#location h2 {
  text-align: left;
}

/*********************/
/****** FOOTER *******/
.push {
  height: 80px;
}
.footer-area {
  padding-top: 40px;
  margin-bottom: 0;
  width: 100%;
  background-color: #555555;
  height: 80px;
  position: absolute;
    bottom: 0;
}
.text-muted{
  color: #999090;
}

img {
  opacity: .9;
  margin-bottom: 30px;
  margin-top: 15px;
  float: left;
}

.or-spacer-vertical {
  display:inline-block;
  margin-top:100px; margin-left:100px; width:100px;
  position:relative;
}
  .mask {
    overflow: hidden;
    width:20px;
    height:200px;
    //outline:1px solid pink;
  }

  &.left .mask: {
    content:'';
    display:block;
    margin-left:-20px;
    width:20px;
    height:100%;
    border-radius:12px / 125px;
    box-shadow:0 0 8px black;
  }

/******************************/
/****** Hover Animation *******/

.imgWrap {
  position: relative;
  height: 250px;
  width: 257px;
  border-radius: .25px;
}

.imgDescription {
  /*position: absolute;*/
  float: right;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  background: rgba(0, 0, 0, 0.5);
  color: white;
  width: 350px;
  padding: 2px 2px 2px 2px;


  visibility: hidden;
  opacity: 0;
  transition-delay: .2s; /* delays for 1 second */
  -webkit-transition-delay: .2s; /* for Safari & Chrome */
  -webkit-transition: visibility opacity 0.9s;
}

.imgWrap:hover .imgDescription {
  visibility: visible;
  opacity: 1;
}

.imgWrap_Shovel {
  position: right;
  float: right;
  height: 250px;
  width: 257px;
}

.imgDescription_Shovel {
  /*position: absolute;*/
  float: left;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  background: rgba(0, 0, 0, 0.5);
  color: white;
  width: 350px;
  padding: 2px 2px 2px 2px;

  visibility: hidden;
  opacity: 0;
  transition-delay: .5s; /* delays for 1 second */
  -webkit-transition-delay: .3s; /* for Safari & Chrome */
  -webkit-transition: visibility opacity 0.9s;
}

.imgWrap_Shovel:hover .imgDescription_Shovel {
  visibility: visible;
  opacity: 1;
}

/*////our Pix////*/

.Pix {
  border-radius: 40px;
  position: relative;
}

.LinkedIn {
  margin-bottom: 35px;
}

.col-md-4 {
  width: 33.33333333%;
  position: center;
  text-align: center;
}

.col-lg-6 {
  width: 50%;
  float: left;
}

h6{
  font-size: 1.8em;
  font-family: "Dosis", sans-serif;
}


.boxes1{
  position: left;
  float: center;
}

.boxes2{
  position: left;
  float: left;
}

